--- a/eregg/pom.xml
+++ b/eregg/pom.xml
@@ -6,12 +6,12 @@
 		<groupId>xiaobai.angle</groupId>
 		<artifactId>springboot-bone</artifactId>
 		<version>0.0.1-SNAPSHOT</version>
-		<relativePath/> <!-- lookup parent from repository -->
+		<relativePath>../pom.xml</relativePath> <!-- lookup parent from repository -->
 	</parent>
 	<groupId>xiaobai.angle</groupId>
-	<artifactId>eurake</artifactId>
+	<artifactId>eregg</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
-	<name>eurake</name>
+	<name>eregg</name>
 	<description>Demo project for Spring Boot</description>
 
 	<properties>
@@ -22,13 +22,7 @@
 	<dependencies>
 		<dependency>
 			<groupId>org.springframework.cloud</groupId>
-			<artifactId>spring-cloud-starter-netflix-eureka-client</artifactId>
-		</dependency>
-
-		<dependency>
-			<groupId>org.springframework.boot</groupId>
-			<artifactId>spring-boot-starter-test</artifactId>
-			<scope>test</scope>
+			<artifactId>spring-cloud-starter-netflix-eureka-server</artifactId>
 		</dependency>
 	</dependencies>
 
