--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
 	<parent>
 		<groupId>org.springframework.boot</groupId>
 		<artifactId>spring-boot-starter-parent</artifactId>
-		<version>2.2.0.M3</version>
+		<version>2.1.5.RELEASE</version>
 		<relativePath/> <!-- lookup parent from repository -->
 	</parent>
 	<groupId>xiaobai.angle</groupId>
@@ -16,6 +16,8 @@
 	<description>所有项目的父项目</description>
 
 	<modules>
+		<module>ereg</module>
+		<module>eregg</module>
 		<module>alita</module>
 		<module>aredis</module>
 		<module>ab-util</module>
