--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
 	<parent>
 		<groupId>org.springframework.boot</groupId>
 		<artifactId>spring-boot-starter-parent</artifactId>
-		<version>2.1.5.RELEASE</version>
+		<version>2.3.0.RELEASE</version>
 		<relativePath/> <!-- lookup parent from repository -->
 	</parent>
 	<groupId>xiaobai.angle</groupId>
@@ -20,8 +20,8 @@
 		<module>eregg</module>
 		<module>alita</module>
 		<module>aredis</module>
-		<module>ab-util</module>
 		<module>ab-commont</module>
+		<module>demo</module>
 	</modules>
 
 	<properties>
