--- a/l_eureka/pom.xml
+++ b/l_eureka/pom.xml
@@ -3,17 +3,16 @@
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 	<parent>
-		<groupId>org.springframework.boot</groupId>
-		<artifactId>spring-boot-starter-parent</artifactId>
-		<version>2.1.6.RELEASE</version>
-		<relativePath/> <!-- lookup parent from repository -->
+		<groupId>xiaobai.angle</groupId>
+		<artifactId>springboot-saber-one</artifactId>
+		<version>0.0.1-SNAPSHOT</version>
+		<relativePath>../pom.xml</relativePath> <!-- lookup parent from repository -->
 	</parent>
-	<groupId>com.dinglicom.cloud</groupId>
 	<artifactId>eurake</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
-	<name>eurake</name>
+	<name>l_eureka</name>
 	<packaging>jar</packaging>
-	<description>注册中心模块</description>
+	<description>注册中心模块 单模块主备启动</description>
 
 	<properties>
 		<java.version>1.8</java.version>
