--- a/a_eureka/pom.xml
+++ b/a_eureka/pom.xml
@@ -8,10 +8,9 @@
 		<version>0.0.1-SNAPSHOT</version>
 		<relativePath>../pom.xml</relativePath> <!-- lookup parent from repository -->
 	</parent>
-	<groupId>xiaobai.angle</groupId>
 	<artifactId>ereg</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
-	<name>ereg</name>
+	<name>a_eureka</name>
 	<description>Demo project for Spring Boot</description>
 
 	<properties>
