--- a/n_swagger/pom.xml
+++ b/n_swagger/pom.xml
@@ -8,11 +8,10 @@
     <version>0.0.1-SNAPSHOT</version>
     <relativePath>../pom.xml</relativePath> <!-- lookup parent from repository -->
   </parent>
-  <groupId>xiaobai.angle</groupId>
   <artifactId>demo</artifactId>
   <version>0.0.1-SNAPSHOT</version>
-  <name>demo</name>
-  <description>demo 示例</description>
+  <name>n_swagger</name>
+  <description>新的swagger 示例</description>
 
   <properties>
     <java.version>1.8</java.version>
