--- a/.gitignore
+++ b/.gitignore
@@ -25,15 +25,5 @@ eurake/target/
 *.iws
 *.iml
 *.ipr
-
-### NetBeans ###
-/nbproject/private/
-/nbbuild/
-/dist/
-/nbdist/
-/.nb-gradle/
-/build/
-
-### VS Code ###
-.vscode/
+/my_utils/target/
 /a_test/target/
