--- a/java/pom.xml
+++ b/java/pom.xml
@@ -11,7 +11,7 @@
 	<groupId>com.loubi</groupId>
 	<artifactId>java</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
-	<name>alibabarule</name>
+	<name>java-rule</name>
 	<description>一个把alibaba规范全实现的项目</description>
 
 	<properties>
